// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Radio component 1`] = `
<label
  className="sp-radio__item"
>
  <input
    checked={false}
    className="sp-radio__input"
    disabled={false}
    name="options"
    onChange={[Function]}
    required={false}
    tabIndex="-1"
    type="radio"
    value="1"
  />
  <span
    className="sp-radio__icon"
    onKeyDown={[Function]}
    tabIndex="0"
  />
  <span
    className="sp-radio__text"
  >
    Option 1
  </span>
</label>
`;

exports[`Render Radio component Disabled 1`] = `
<label
  className="sp-radio__item sp-radio__item--disabled"
>
  <input
    checked={false}
    className="sp-radio__input"
    disabled={true}
    name="options"
    onChange={[Function]}
    required={false}
    tabIndex="-1"
    type="radio"
    value="1"
  />
  <span
    className="sp-radio__icon"
    onKeyDown={[Function]}
    tabIndex="-1"
  />
  <span
    className="sp-radio__text"
  >
    Option 1
  </span>
</label>
`;

exports[`Render Radio component Required 1`] = `
<label
  className="sp-radio__item"
>
  <input
    checked={false}
    className="sp-radio__input"
    disabled={false}
    name="options"
    onChange={[Function]}
    required={true}
    tabIndex="-1"
    type="radio"
    value="1"
  />
  <span
    className="sp-radio__icon"
    onKeyDown={[Function]}
    tabIndex="0"
  />
  <span
    className="sp-radio__text"
  >
    Option 1
  </span>
</label>
`;

exports[`Render Radio component Required, disabled 1`] = `
<label
  className="sp-radio__item sp-radio__item--disabled"
>
  <input
    checked={false}
    className="sp-radio__input"
    disabled={true}
    name="options"
    onChange={[Function]}
    required={true}
    tabIndex="-1"
    type="radio"
    value="1"
  />
  <span
    className="sp-radio__icon"
    onKeyDown={[Function]}
    tabIndex="-1"
  />
  <span
    className="sp-radio__text"
  >
    Option 1
  </span>
</label>
`;
